--- a/ClinicTranslator/app/src/main/res/layout/activity_main.xml
+++ b/ClinicTranslator/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     tools:context=".MainActivity">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/textView_doctorLanguage"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:layout_marginBottom="8dp"
@@ -16,7 +16,7 @@
         app:layout_constraintStart_toStartOf="@+id/spinnerDoctorLanguage" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/textView_patientLanguage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
@@ -53,12 +53,12 @@
         android:entries="@array/languages_array"
         android:prompt="@string/patient_language_prompt"
         app:layout_constraintBottom_toBottomOf="@+id/spinnerDoctorLanguage"
-        app:layout_constraintEnd_toStartOf="@+id/button"
+        app:layout_constraintEnd_toStartOf="@+id/goButton"
         app:layout_constraintStart_toEndOf="@+id/spinnerDoctorLanguage"
         app:layout_constraintTop_toTopOf="@+id/spinnerDoctorLanguage" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/goButton"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
@@ -70,23 +70,45 @@
         app:layout_constraintBottom_toBottomOf="@+id/spinnerPatientLanguage"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/spinnerPatientLanguage"
-        app:layout_constraintTop_toTopOf="@+id/textView2" />
+        app:layout_constraintTop_toTopOf="@+id/textView_patientLanguage"
+        android:onClick="selectLanguage"/>
 
     <ScrollView
+        android:id="@+id/scrollView"
         android:layout_width="368dp"
         android:layout_height="0dp"
+        android:layout_marginBottom="7dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintBottom_toTopOf="@+id/translateButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/goButton">
+
+        <LinearLayout
+            android:id="@+id/conversationLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+        </LinearLayout>
+
+    </ScrollView>
+
+    <Button
+        android:id="@+id/translateButton"
+        android:layout_width="0dp"
+        android:layout_height="48dp"
         android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:text="@string/translateButton"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical" />
-    </ScrollView>
+        app:layout_constraintTop_toBottomOf="@+id/scrollView" />
 
 
 </android.support.constraint.ConstraintLayout>
