Added Hindi support to the code and added code to change language Locale

--- a/ClinicTranslator/app/src/main/res/layout/activity_main.xml
+++ b/ClinicTranslator/app/src/main/res/layout/activity_main.xml
@@ -108,7 +108,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/scrollView" />
+        app:layout_constraintTop_toBottomOf="@+id/scrollView"
+        android:onClick="translate"/>
 
 
 </android.support.constraint.ConstraintLayout>
