--- a/clinicAssist/src/pages/translator/translator.scss
+++ b/clinicAssist/src/pages/translator/translator.scss
@@ -1,3 +1,12 @@
 page-translator {
+	ion-auto-complete {
+		.searchbar-search-icon { display:none; width:0; height:0; }
+		.searchbar-input { 
+			padding-left: 10px !important;
+		}
+	}
 
+	.send-icon-button {
+		margin-top: 10px;
+	}
 }
